--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-
-server.port=8081
+server.port=3333
+spring.application.name=doctor-service
 #spring.datasource.url=jdbc:mysql://localhost:3306/productdb1
-spring.datasource.url=jdbc:mysql://localhost:3306/productdb?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/HIMS1DOCTORDB?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/HIMS1DOCTORDB?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,12 +10,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-eureka.client.enabled=false
-service.security.secure-key-username=randomSecureKeyUsername!
-service.security.secure-key-password=randomSecureKeyPaswword!
-spring.security.user.name=user
-spring.security.user.password=password
+#service.security.secure-key-username=randomSecureKeyUsername!
+#service.security.secure-key-password=randomSecureKeyPaswword!
+#spring.security.user.name=user
+#spring.security.user.password=password
 spring.main.allow-circular-references=true
+eureka.client.enabled=false
+#eureka.client.service-url.defaultZone=http://localhost:6666/eureka/
 #spring.data.rest.base-path=/api
 #server.error.include-message=always
 #server.error.include-binding-errors=always
